# libomxil-bellagio

./: build.sh  configure.ac
src/: Makefile.am  omx_comp_debug_levels.h  omx_samsung_resource_manager.c  omx_samsung_resource_manager.h  queue.h  st_static_component_loader.c
src/base/: omx_base_component.c  omx_base_component.h
src/dynamic_loader/: Makefile.am  samsung_dynamic_component_loader.c  samsung_dynamic_component_loader.h
test/components/: Makefile.am
